--- a/frontend/src/components/Treatment/AddTreatment.css
+++ b/frontend/src/components/Treatment/AddTreatment.css
@@ -1,11 +1,75 @@
 /* CSS for AddTreatment Form */
+.home-back {
+    background-image: url('../Assets/MHome.png'); /* Set background image */
+    background-size: cover; /* Make sure the image covers the entire container */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    height: 100vh; /* Adjust the height as needed */
+    width: 100%;
+  }
+
+.Allforms{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+
+  }
+
+.Section1 {
+    border: 2px solid #00e1ff;
+    margin-left: 150px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    height: auto; /* Adjust this as needed to ensure there's space to center the image */
+    display: flex;
+    align-items: center; /* Vertically centers items */
+    justify-content: center; /* Horizontally centers items */
+}
+
+.Doc-1 {
+    height: auto; /* Adjust the height as needed */
+    width: 200px;
+}
+
+.Section2{
+    width: 500px;
+    flex-grow: 1;
+}
+
+.add-button1{
+    width: 100%;
+    padding: 10px;
+    margin: 20px;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.add-button2{
+    width: 100%;
+    padding: 10px;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
 form {
     max-width: 500px;
     margin: 0 auto;
     padding: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #00e1ff;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -26,7 +90,7 @@ input[type="text"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #c9bebe;
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -34,7 +98,7 @@ input[type="text"] {
 #submit-button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #1A34C3;
     color: white;
     border: none;
     border-radius: 5px;
