--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -161,7 +161,7 @@ body {
 
 /* Footer Styles */
 .footer {
-  padding: 40px;
+  padding: 20px;
   background-color: #ffffff;
   border-top: 1px solid #d1d1d1; /* Gray line between home section and footer */
   display: flex;
@@ -173,11 +173,12 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 2px;
 }
 
 .logo-footer-Text {
   font-size: 24px;
+  margin-top: -50px;
   color: #000000; /* Black color for the footer logo text */
 }
 
@@ -188,6 +189,9 @@ body {
   height: 100px; /* Adjust the height as needed */
 }
 
+.quick-links{
+  margin-left: 1px;
+}
 .footer-content h4 {
   color: #000000; /* Black color for the footer section headings */
   margin-bottom: 10px;
@@ -206,6 +210,7 @@ body {
 .social-media {
   display: flex;
   gap: 10px;
+  margin-right: 1800px;
 }
 
 .social-media a {
@@ -218,6 +223,6 @@ body {
 
 .copy-right {
   text-align: center;
-  margin: 10px;
+  /*margin: 10px;*/
   font-size: 15px;
 }
