--- a/frontend/src/components/Treatment/ViewTreatment.css
+++ b/frontend/src/components/Treatment/ViewTreatment.css
@@ -1,3 +1,46 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+/* Header Styles */
+
+.header {
+    display: flex;
+    justify-content: center; /* Center the content */
+    align-items: center;
+  
+    background-color: transparent; /* Transparent to show the gradient */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #d1d1d1; /* Gray line between header and navigation */
+  }
+  
+  .logo {
+    font-size: 24px;
+    text-align: center;
+    flex: 1; /* Allow the logo to take up available space */
+    color: #000000; /* Black color for the logo text */
+  }
+  
+  .logo-nav {
+    background-size: cover; /* Make sure the image covers the entire container */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    height: 70px; /* Adjust the height as needed */
+  }
+  
+  .login-btn {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px; /* Position the login button on the right */
+  }
+/*end home header*/
+
 .home-back {
     background-image: url('../Assets/MHome.png'); /* Set background image */
     background-size: cover; /* Make sure the image covers the entire container */
@@ -130,3 +173,5 @@ button:nth-of-type(2) { /* Assuming this is the add treatment button */
 button:nth-of-type(2):hover {
     background-color: #333; /* Darker black on hover */
 }
+
+
