--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -5,7 +5,8 @@ body {
   padding: 0;
 }
 
-.home-container {
+
+.home-container1 {
   background-image: url('../Assets/MHome.png'); /* Set background image */
   background-size: cover; /* Make sure the image covers the entire container */
   background-position: center; /* Center the image */
@@ -40,7 +41,7 @@ body {
   height: 70px; /* Adjust the height as needed */
 }
 
-.login-btn {
+.login-btn1 {
   padding: 8px 16px;
   background-color: #007bff;
   color: white;
@@ -106,6 +107,11 @@ body {
 .navigation ul li a:hover::after {
   width: 100%; /* Expand underline on hover */
 }
+
+
+
+
+
 
 /* Home Section Styles */
 .home-section {
