--- a/frontend/src/components/Treatment/ViewTreatment.css
+++ b/frontend/src/components/Treatment/ViewTreatment.css
@@ -29,7 +29,7 @@ body {
     height: 70px; /* Adjust the height as needed */
   }
   
-  .login-btn {
+  .login-btnV {
     padding: 8px 16px;
     background-color: #007bff;
     color: white;
